--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Chen大 <1150229571@qq.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --host 0.0.0.0 --config build/webpack.dev.conf.js",
+    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js"
@@ -73,5 +73,15 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "main": ".eslintrc.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/chenqing8/demo.git"
+  },
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/chenqing8/demo/issues"
+  },
+  "homepage": "https://github.com/chenqing8/demo#readme"
 }
